--- a/frontend/index.html
+++ b/frontend/index.html
@@ -165,7 +165,7 @@
             font-family: 'Nunito', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             background: var(--bg-primary);
             min-height: 100vh;
-            padding: 20px;
+            padding: 5px 20px 20px 20px;
             color: var(--text-primary);
             transition: background 0.3s, color 0.3s;
         }
@@ -177,6 +177,7 @@
         .container {
             max-width: 1400px;
             margin: 0 auto;
+            padding: 0;
             transition: filter 0.3s;
         }
 
@@ -410,8 +411,28 @@
 
         header {
             text-align: center;
-            margin-bottom: 40px;
+            margin: 0 0 10px 0;
+            padding: 0;
             color: var(--text-header);
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 0px;
+        }
+
+        header .logo {
+            max-width: 440px;
+            width: 100%;
+            height: auto;
+            filter: drop-shadow(0 4px 12px rgba(0,0,0,0.15));
+            transition: transform 0.3s ease;
+            margin: 0;
+            padding: 0;
+            display: block;
+        }
+
+        header .logo:hover {
+            transform: scale(1.02);
         }
 
         header h1 {
@@ -429,6 +450,8 @@
             display: grid;
             grid-template-columns: 1fr 1.5fr;
             gap: 30px;
+            margin: 0;
+            padding: 0;
         }
 
         .input-panel, .results-panel {
@@ -478,8 +501,22 @@
 
         .guided-modal-header {
             text-align: center;
-            padding: 40px 40px 20px 40px;
+            padding: 15px 40px 10px 40px;
             border-bottom: 2px solid var(--border-color);
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 0px;
+        }
+
+        .guided-modal-header .logo-small {
+            max-width: 304px;
+            width: 85%;
+            height: auto;
+            filter: drop-shadow(0 2px 8px rgba(0,0,0,0.1));
+            margin: 0;
+            padding: 0;
+            display: block;
         }
 
         .guided-modal-header h2 {
@@ -491,6 +528,8 @@
         .guided-modal-header p {
             color: var(--text-secondary);
             font-size: 1.1em;
+            margin: 5px 0 0 0;
+            padding: 0;
         }
 
         .guided-modal-body {
@@ -1586,7 +1625,7 @@
     <div class="guided-modal-overlay" id="guidedModalOverlay">
         <div class="guided-modal">
             <div class="guided-modal-header">
-                <h2>🎮 Welcome to Lutem</h2>
+                <img src="lutem-logo.png" alt="Lutem" class="logo-small">
                 <p id="modalHeaderText">Let's find your perfect game!</p>
             </div>
 
@@ -1720,8 +1759,7 @@
 
     <div class="container" id="mainContainer">
         <header>
-            <h1>🎮 LUTEM</h1>
-            <p>Your AI-Powered Gaming Companion</p>
+            <img src="lutem-logo.png" alt="Lutem - Your AI-Powered Gaming Companion" class="logo">
         </header>
 
         <div class="main-content">
