refactor: split monolithic CSS into modular files
- Extract base.css: CSS variables, resets, typography
- Extract layout.css: header, navigation, containers, grid
- Extract components.css: buttons, cards, forms, modals
- Update index.html to link external CSS files
- Update FRONTEND_REFACTOR_PLAN.md with progress

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,6 +11,9 @@
     <!-- CSS Variables & Themes -->
     <link rel="stylesheet" href="css/variables.css">
     <link rel="stylesheet" href="css/themes.css">
+    <link rel="stylesheet" href="css/base.css">
+    <link rel="stylesheet" href="css/components.css">
+    <link rel="stylesheet" href="css/layout.css">
     
     <style>
         /* CSS Variables are loaded from css/variables.css */
