feat: Add footer with author name and GitHub link

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1152,5 +1152,12 @@
     <!-- Main init (depends on all above) -->
     <script src="js/main.js"></script>
 
+    <!-- Footer -->
+    <footer class="site-footer">
+        <span>Built by Jan Wilhelm</span>
+        <span class="footer-divider">•</span>
+        <a href="https://github.com/jantobiaswilhelm/LutemPrototype" target="_blank" rel="noopener">GitHub</a>
+    </footer>
+
 </body>
 </html>
