--- a/frontend/index.html
+++ b/frontend/index.html
@@ -494,13 +494,20 @@
                         <h1 style="text-align: left; color: var(--text-primary); font-size: 2.5em;">My Calendar</h1>
                         <p style="text-align: left; color: var(--text-secondary); margin-top: 10px;">Plan your gaming sessions and tasks</p>
                     </div>
-                    <button style="background: var(--accent-primary); color: white; border: none; padding: 12px 24px; border-radius: 12px; font-weight: 600; cursor: pointer; transition: all 0.3s; display: flex; align-items: center; gap: 8px;" 
-                            onclick="openAddEventModal()"
-                            onmouseover="this.style.background='var(--accent-secondary)'; this.style.transform='translateY(-2px)'"
-                            onmouseout="this.style.background='var(--accent-primary)'; this.style.transform='translateY(0)'">
-                        <span style="font-size: 1.2em;">➕</span>
-                        <span>Add Event</span>
-                    </button>
+                    <div style="display: flex; gap: 12px;">
+                        <button class="calendar-add-btn gaming-btn" 
+                                onclick="openAddEventModal(null, null, 'gaming')"
+                                title="Schedule a gaming session">
+                            <span>🎮</span>
+                            <span>Gaming Session</span>
+                        </button>
+                        <button class="calendar-add-btn task-btn" 
+                                onclick="openAddEventModal(null, null, 'task')"
+                                title="Create a task or event">
+                            <span>📋</span>
+                            <span>New Task</span>
+                        </button>
+                    </div>
                 </div>
             </header>
             
