Add Firebase and Firestore integration with local dev setup

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1503,6 +1503,7 @@
     
     <!-- Feature modules (depend on core + UI) -->
     <script src="js/api.js"></script>
+    <script src="js/firestore.js"></script>
     <script src="js/recommendation.js"></script>
     <script src="js/tabs.js"></script>
     <script src="js/games-library.js"></script>
